@@ -153,7 +153,7 @@ try_ole=yes)
 
 AC_ARG_WITH(gtksourceview,
 [  --with-gtksourceview   Use installed gtksourceview (gtk 2.0 only) [default=auto]],
-if test "x${withval}" = "xno"
+if test "x${withval}" = "xno" || test "$try_gnome" = "no"
 then
   try_sourceview=no
 else
